[gd_scene load_steps=7 format=3 uid="uid://c6tf1hkpbqeo5"]

[ext_resource type="Theme" uid="uid://7l22upj7t1q7" path="res://UI/DefaultUITheme.tres" id="1_8heup"]
[ext_resource type="Texture2D" uid="uid://b1qlx277g7jwu" path="res://UI/Sprites/gui_gradient.png" id="2_r2gxi"]
[ext_resource type="Script" path="res://UI/FieldMenuUIGeneric.gd" id="3_aesr4"]
[ext_resource type="Texture2D" uid="uid://cslxfhh3r5hq7" path="res://UI/Sprites/Cursor.png" id="4_gi5q5"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ic2as"]
atlas = ExtResource("2_r2gxi")
region = Rect2(32, 32, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f26k"]
atlas = ExtResource("2_r2gxi")
region = Rect2(328, 233, 9, 15)

[node name="FieldMenu" type="NinePatchRect"]
self_modulate = Color(1, 1, 1, 0.741176)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 25.0
offset_top = -140.0
offset_right = 223.0
offset_bottom = -12.0
grow_vertical = 0
size_flags_horizontal = 3
focus_mode = 2
theme = ExtResource("1_8heup")
texture = SubResource("AtlasTexture_ic2as")
region_rect = Rect2(0, 0, 96, 96)
script = ExtResource("3_aesr4")

[node name="Header0" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 21.0
offset_top = -4.0
offset_right = 58.0
offset_bottom = 11.0
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
theme_override_colors/font_outline_color = Color(0.211765, 0.4, 0.847059, 1)
text = "Black magic"
uppercase = true

[node name="Header1" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 144.0
offset_top = -4.0
offset_right = 186.0
offset_bottom = 11.0
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
theme_override_colors/font_outline_color = Color(0.211765, 0.4, 0.847059, 1)
text = "MP cost"
horizontal_alignment = 2
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 27.0
offset_top = 12.0
offset_right = -18.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_8heup")

[node name="Command0" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command0"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "Fire"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command0"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "6"
horizontal_alignment = 2
uppercase = true

[node name="Command1" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command1"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "Cure"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command1"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "5"
horizontal_alignment = 2
uppercase = true

[node name="Command2" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command2"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "Fira"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command2"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "13"
horizontal_alignment = 2
uppercase = true

[node name="Command3" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command3"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "Raise"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command3"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "26"
horizontal_alignment = 2
uppercase = true

[node name="Command4" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command4"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "demi"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command4"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "12"
horizontal_alignment = 2
uppercase = true

[node name="Command5" type="HBoxContainer" parent="VBoxContainer"]
visible = false
layout_mode = 2

[node name="Name" type="Label" parent="VBoxContainer/Command5"]
layout_mode = 2
size_flags_horizontal = 0
theme = ExtResource("1_8heup")
text = "demi"
uppercase = true

[node name="Val" type="Label" parent="VBoxContainer/Command5"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_8heup")
text = "12"
horizontal_alignment = 2
uppercase = true

[node name="Pointer" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 8.0
offset_right = 37.0
offset_bottom = 48.0
scale = Vector2(0.5, 0.5)
theme = ExtResource("1_8heup")
texture = ExtResource("4_gi5q5")

[node name="LeftPagePointer" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = -3.0
offset_top = 52.0
offset_right = 7.0
offset_bottom = 67.0
texture = SubResource("AtlasTexture_0f26k")

[node name="RightPagePointer" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 191.0
offset_top = 52.0
offset_right = 201.0
offset_bottom = 67.0
texture = SubResource("AtlasTexture_0f26k")
flip_h = true
